<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">POvMT Android App</string>
    <string name="action_add_ti">Adicionar Ti</string>
    <string name="adicionar">Adicionar</string>
    <string name="adicionando_ti">Adicionando Ti</string>
    <string name="activity">Atividade</string>
    <string name="auth">POvMT</string>
    <string name="begin">Início</string>
    <string name="carregando_ti">Carregando Tis</string>
    <string name="cant_without_connection">Impossivel sem conexão.</string>
    <string name="connection_unavailable">Conexão indisponivel.</string>
    <string name="end">Final</string>
    <string name="hora_inicio">Hora Inicio</string>
    <string name="hora_fim">Hora Final</string>
    <string name="action_settings">Configurações</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">OK</string>
    <string name="label1">Últimas Semanas</string>
    <string name="label2">Semana Atual</string>
    <string name="label3">Relatório de Atividades</string>
    <string name="no_ti_on_this_week">Você não tem Ti nessa semana.</string>
    <string name="priority">Prioridade</string>
    <string name="refresh">Atualizar</string>
    <string name="register_dialog_title">Novo Ti</string>
    <string name="register_ti">Registrar Ti</string>
    <string name="registrar">Registrar</string>
    <string name="total">Total:</string>
    <string name="please_wait">Por favor, espere.</string>
    <string name="ti_title">Título do Ti</string>
    <string name="title">Título</string>
    <string name="time_begin">Hora de Início</string>
    <string name="time_end">Hora de Termino</string>
    <string name="title_activity_register_ti">Registrar Ti</string>

</resources>