<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register_ti" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" >

        <TextView
            android:id="@+id/textViewTiTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewTiTitle"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/textViewTiTitle"
            android:hint="@string/ti_title"
            android:inputType="text"
            android:maxLength="25"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewTiBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTiTitle"
            android:layout_marginTop="16dp"
            android:text="@string/begin" />

        <TextView
            android:id="@+id/textViewTimeBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewTiBegin"
            android:layout_toRightOf="@+id/textViewTiBegin"
            android:layout_alignLeft="@+id/editTextTitle"
            android:text="@string/time_begin" />

        <TextView
            android:id="@+id/textViewTiEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTiBegin"
            android:layout_marginTop="8dp"
            android:text="@string/end" />

        <TextView
            android:id="@+id/textViewTimeEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textViewTiEnd"
            android:layout_alignBaseline="@+id/textViewTiEnd"
            android:layout_alignLeft="@+id/textViewTimeBegin"
            android:text="@string/time_end" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_mid"
        android:layout_marginTop="24dp" >

        <Button
            android:id="@+id/buttonRegisterTi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/registrar" />
    </RelativeLayout>

</RelativeLayout>